[package]
name = "rg3d-sound-sdl"
version = "0.1.0"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>"]
description = "Use rg3d-sound with SDL's audio subsystem"
categories = ["game-development", "multimedia"]
keywords = ["audio", "sound", "sdl", "rg3d", "bridge"]
license = "MIT"
repository = "https://github.com/mcb2003/rg3d-sound-sdl"
edition = "2021"

[dependencies]
rg3d-sound = "0.26.0"
sdl2 = "0.35.2"
static_assertions = "1.1.0"
